--- a/asconfig.json
+++ b/asconfig.json
@@ -7,8 +7,8 @@
       "debug": true
     },
     "release": {
-      "outFile": "build/release.wasm",
-      "textFile": "build/release.wat",
+      "outFile": "dist/release.wasm",
+      "textFile": "dist/release.wat",
       "sourceMap": true,
       "optimizeLevel": 3,
       "shrinkLevel": 0,
